--- a/assessment/assessment/main.css
+++ b/assessment/assessment/main.css
@@ -5,13 +5,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+One');
 @import url('https://fonts.googleapis.com/css?family=Acme+One');
 
-/*.navbar {
-    background-color: radial-gradient(#073C72, #211B43);
-    background-color:#073C72;
-    padding: 20px;
-    overflow: hidden;
-}*/
 
+/*Navigation bar begins*/
 .navbar { 
     background-color: #073C72;
     margin: 0px;
@@ -21,6 +16,7 @@
 
 li {
     float: left;
+    list-style-type: none;
 }
 
 li a {
@@ -54,10 +50,9 @@ li a:hover {
     color: #FD7135;
     background-color: #052f58;
 }
+/*Navigation bar ends*/
 
-/*li a:visited {
-    color: #FD7135;
-}*/
+/*General use classes for all pages*/
 p {
     font-family: "Inter";
 }
@@ -72,54 +67,8 @@ body {
     border-radius: 50%;
 }
 
-li {
-    list-style-type: none;
-}
-
-
-
-
-
-body#services {
-    background-image: url("images/bgplanet.png"), url("images/bgmath.png");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: -10% 50%, 110% 50%;
-    background-color: #fffff0d5;
-    background-blend-mode: lighten;
-}
-
-.servicessec {
-    text-shadow: -1px -1px 0 black, 1px -1px 0 black, 1px 1px 0 black,
-    1px 1px 0 black;
-}
-
-img#glasses {
-    width: 100%;
-}
-
-table.subjects {
-    display: table;
-    margin: 0 auto;
-}
-
-.topictable , .stattable , .benefittable {
-    width: 78px;
-    border-collapse: collapse;
-}
-
-.stattable {
-    color: white;
-    font-family: 'Arial';
-}
-
 img.main {
-    /* width: 200; */
     border: 12px, solid, #1B7B99;
-}
-
-p#registertext {
-    position: right;
 }
 
 .krona-one-regular {
@@ -134,6 +83,65 @@ h1 {
     
 }
 
+.button {
+    background-color: #00BF63;
+    border: none;
+    color: white;
+    text-align: center;
+    padding: 16px 32px;
+    display: inline-block;
+    text-decoration: none;
+    border-radius: 15px;
+}
+
+a.active {
+    color: #FD7135;
+}
+
+/*End*/
+
+/*Decor for services page*/
+body#services {
+    background-image: url("images/bgplanet.png"), url("images/bgmath.png");
+    background-repeat: no-repeat;
+    background-position: -10% 40%, 110% 40%;
+    background-color: #fffff0d5;
+    background-blend-mode: lighten;
+}
+
+img#glasses {
+    width: 100%;
+}
+
+table.subjects {
+    display: table;
+    margin: 0 auto;
+}
+
+.topictable , .stattable {
+    width: 78px;
+    border-collapse: collapse;
+}
+
+.stattable {
+    color: white;
+    font-family: 'Arial';
+}
+
+.jointhe {
+    margin-top: 40px;
+}
+
+h5 {
+    margin: 0px;
+}
+
+h1.tutortasticfam {
+    margin: 0px;
+    padding: 0px;
+}
+
+/* Landing */
 .land-img {
     border: 20px, solid, #1B7B99;
     width: 360px;
@@ -180,7 +188,6 @@ span.right {
 }
 
 .review {
-    /*display: inline-block;*/
     color: white;
     text-align: left;
 }
@@ -215,35 +222,20 @@ div.landingstats {
 }
 
 
-.benefits {
-    background: grey;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.button {
-    background-color: #00BF63;
-    border: none;
-    color: white;
-    text-align: center;
-    padding: 16px 32px;
-    display: inline-block;
-    text-decoration: none;
-    border-radius: 15px;
-}
-
-a.active {
-    color: #FD7135;
+/* Register page */
+p#registertext {
+    position: right;
 }
 
 div.register {
+    padding: 0px;
     margin-top: 55px;
     display: inline-block;
 }
 
 .registerimage {
     border-radius: 30px;
-    width: 400px;
+    width: 350px;
     position: left;
 }
 body#registerbody {
@@ -256,6 +248,7 @@ body#registerbody {
     background-size: 600px;
 }
 
+/* About page */
 .aboutus {
     position: fixed;
     left: 40px;
