--- a/assessment/main.css
+++ b/assessment/main.css
@@ -57,6 +57,14 @@ p {
     font-family: "Inter";
 }
 
+img {
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-drag: none;
+}
+
 body {
     background: #fffff0;
     margin: auto;
